--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "simple-bootstrap-alerts-for-gutenberg",
+  "name": "pmpro-goals",
   "version": "1.0.0",
   "license": "GPL-2.0-or-later",
   "main": "js/gutenberg.js",
   "devDependencies": {
-    "babel-core": "^6.25.0",
-    "babel-loader": "^7.1.1",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.4",
     "babel-plugin-transform-react-jsx": "^6.24.1",
-    "babel-preset-env": "^1.6.0",
-    "cross-env": "^5.0.1",
-    "webpack": "^3.1.0"
+    "babel-preset-env": "^1.7.0",
+    "cross-env": "^5.2.0",
+    "webpack": "^3.12.0"
   },
   "scripts": {
     "build": "cross-env BABEL_ENV=default NODE_ENV=production webpack",
