General Updates For Final Release
* Renamed JS files from Gutenberg to pmpro-goals-block.

* Improved settings to also show inline settings for better UX.

* Improved style of the progress bar.

* Adjusted default colors.

* Adjusted the before text to only show right in front of the calculated values instead of infront of the goal / total amounts.

* Automatically format the amounts if "Revenue" type is selected.

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "pmpro-goals",
   "version": "1.0.0",
   "license": "GPL-2.0-or-later",
-  "main": "js/gutenberg.js",
+  "main": "js/pmpro-goals-block.js",
   "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
