--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,10 @@ node_modules
 # Log files
 log/*.log
 log/*.txt
-build/index.asset.php
+
+#Build folder
+build/index.js
 build/index.js.map
+build/index.asset.php
+#NPM
 package-lock.json
