--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "Display a progress bar for membrship site signup and revenue goals.",
   "main": "build/index.js",
   "scripts": {
-    "start": "wp-scripts start",
-    "build": "wp-scripts build"
+    "start": "npm run watch:sass & wp-scripts start",
+    "build": "npm run build:sass && wp-scripts build",
+    "build:sass": "sass ./scss/pmpro-goals.scss css/pmpro-goals.css",
+    "watch:sass": "sass --watch ./scss/pmpro-goals.scss:css/pmpro-goals.css"
   },
   "repository": {
     "type": "git",
@@ -22,6 +24,12 @@
   },
   "homepage": "https://github.com/strangerstudios/pmpro-goals#readme",
   "devDependencies": {
-    "@wordpress/scripts": "^23.7.2"
+    "@wordpress/scripts": "^23.7.2",
+    "node-sass": "^7.0.3",
+    "sass": "^1.62.1",
+    "webpack-cli": "^5.1.1"
+  },
+  "dependencies": {
+    "react-select": "^5.7.3"
   }
 }
