--- a/.gitattributes
+++ b/.gitattributes
@@ -8,4 +8,5 @@ package-lock.json export-ignore
 package.json export-ignore
 webpack.config.js export-ignore
 src export-ignore
-scss export ignore
+scss export-ignore
+README.MD export-ignore
