--- a/.gitattributes
+++ b/.gitattributes
@@ -4,9 +4,11 @@
 .editorconfig export-ignore
 .gitattributes export-ignore
 .gitignore export-ignore
+.github export-ignore
 package-lock.json export-ignore
 package.json export-ignore
 webpack.config.js export-ignore
 src export-ignore
 scss export-ignore
 README.MD export-ignore
+.github export-ignore
